fixed tweet text overflow and changed counter color  back to black when words number go back to valid

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -49,6 +49,10 @@ section .new-tweet {
   border-radius: 5px;
 }
 
+.tweet-button-words-left button:hover {
+  cursor: pointer;
+}
+
 .new-tweet {
   margin-top: 30px;
 }
